--- a/src/css/pers_css.css
+++ b/src/css/pers_css.css
@@ -24,7 +24,8 @@ ul{
 }
 
 .padding-30{
-  padding: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 
@@ -81,7 +82,8 @@ ul{
   margin-left: 20px;
   margin-right: 20px;
   border-radius: 6px;
-  padding: 70px;
+  padding-top: 70px;
+  padding-bottom: 70px;
   box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
 
@@ -92,4 +94,20 @@ footer{
   color: white;
   display: block;
   background-color: black;
+}
+
+@media only screen and (max-width: 600px){
+  .main-raised {
+    margin-left: 0px;
+    margin-right: 0px;
+    border-radius: 6px;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
+  }
+
+.main-wrapper {
+  padding: 5px;
+}
+  
 }
