--- a/src/css/pers_css.css
+++ b/src/css/pers_css.css
@@ -97,6 +97,11 @@ footer{
 }
 
 @media only screen and (max-width: 600px){
+  .main{
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+
   .main-raised {
     margin-left: 0px;
     margin-right: 0px;
@@ -106,8 +111,8 @@ footer{
     box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
   }
 
-.main-wrapper {
-  padding: 5px;
-}
+  .main-wrapper {
+    padding: 10px;
+  }
   
 }
