--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 .App-logo {
