--- a/src/css/pers_css.css
+++ b/src/css/pers_css.css
@@ -25,7 +25,7 @@ h1{
   font-weight: bolder;
 }
 
-h3{
+h2{
   padding-bottom: 30px;
 }
 
@@ -136,6 +136,11 @@ footer{
 
 
 @media only screen and (max-width: 600px){
+  h1{
+    font-size: 50px;
+    font-weight: bolder;
+  }
+
   .main{
     padding-right: 15px;
     padding-left: 15px;
